Meeting and Execution Photos Swagger and Postman
